Fix vertical scrollbars in code samples.

--- a/styles/shCore.css
+++ b/styles/shCore.css
@@ -56,7 +56,8 @@
   width: 100% !important;
   margin: 1em 0 1em 0 !important;
   position: relative !important;
-  overflow: auto !important;
+  overflow-y: hidden !important;
+  overflow-x: auto !important;
   font-size: 1em !important;
 }
 .syntaxhighlighter.source {
